--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bourbon-neat": "1.8.0",
     "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.4",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-uglify": "^2.2.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-postcss": "^0.8.0",
